fix image color on dark mode

--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -7,3 +7,9 @@
 
 .vssue-header-powered-by
     font-size: 8px
+
+.theme-dark
+    .page
+        .theme-default-content
+            img
+                filter: invert(0.883)
